--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   </head>
   <body>
     <h1>Welcome to AI poem generator</h1>
+    <footer>
+      This AI project was coded by
+      <a href="https://github.com/SandraG88">Sandra Galic</a>
+      and is open sourced on GitHub
+      <a href="https://github.com/SandraG88/poems-generator"></a>
+      and is hosted on Netlify
+      <a href="https://poem-generator-sg.netlify.app/"></a>
+    </footer>
     <script src="src/index.js"></script>
   </body>
 </html>
