--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
     <footer>
       This AI project was coded by
       <a href="https://github.com/SandraG88">Sandra Galic</a>
-      and is open sourced on GitHub
-      <a href="https://github.com/SandraG88/poems-generator"></a>
-      and is hosted on Netlify
-      <a href="https://poem-generator-sg.netlify.app/"></a>
+      and is
+      <a href="https://github.com/SandraG88/poems-generator"
+        >open sourced on GitHub</a
+      >
+      and is
+      <a href="https://poem-generator-sg.netlify.app/">hosted on Netlify</a>
     </footer>
     <script src="src/index.js"></script>
   </body>
