--- a/index.html
+++ b/index.html
@@ -7,7 +7,29 @@
     <title>AI poem generator</title>
   </head>
   <body>
-    <h1>Welcome to AI poem generator</h1>
+    <div class="container">
+      <header>
+        <h1>Welcome to AI poem generator</h1>
+      </header>
+      <main>
+        <form>
+          <input
+            type="text"
+            placeholder="Enter the topic of a poem"
+            autofocus
+            required
+            autocomplete="off"
+            class="instructions"
+          />
+          <input type="submit" class="submit-button" />
+        </form>
+        <div class="poem">
+          The poem will go here
+          <br />
+          The poem will go here
+        </div>
+      </main>
+    </div>
     <footer>
       This AI project was coded by
       <a href="https://github.com/SandraG88">Sandra Galic</a>
