--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           />
           <input type="submit" class="submit-button" />
         </form>
-        <div class="poem">
+        <div class="poem" id="poem">
           The poem will go here
           <br />
           The poem will go here
