--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/style.css" />
     <title>AI poem generator</title>
   </head>
@@ -12,7 +14,7 @@
         <h1>Welcome to AI poem generator</h1>
       </header>
       <main>
-        <form>
+        <form id="poem-generator-form">
           <input
             type="text"
             placeholder="Enter the topic of a poem"
@@ -20,26 +22,26 @@
             required
             autocomplete="off"
             class="instructions"
+            id="user-instructions"
           />
           <input type="submit" class="submit-button" />
         </form>
-        <div class="poem" id="poem">
-          The poem will go here
-          <br />
-          The poem will go here
-        </div>
+        <div class="hint">i.e: Flower, Paris or Cheese</div>
+
+        <div class="poem hidden" id="poem"></div>
       </main>
+
+      <footer>
+        This AI project was coded by
+        <a href="https://github.com/SandraG88">Sandra Galic</a>
+        and is
+        <a href="https://github.com/SandraG88/poems-generator"
+          >open sourced on GitHub</a
+        >
+        and is
+        <a href="https://poem-generator-sg.netlify.app/">hosted on Netlify</a>
+      </footer>
     </div>
-    <footer>
-      This AI project was coded by
-      <a href="https://github.com/SandraG88">Sandra Galic</a>
-      and is
-      <a href="https://github.com/SandraG88/poems-generator"
-        >open sourced on GitHub</a
-      >
-      and is
-      <a href="https://poem-generator-sg.netlify.app/">hosted on Netlify</a>
-    </footer>
     <script src="src/index.js"></script>
   </body>
 </html>
